welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: type mismatch;
 found   : Int
 required: Boolean
	if (T(0)==T(1)&&T(1)&&T(2)) {
                         ^