welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
	var x:Int=0;
	var T=Array(a,b,c);

	if (T(0)==T(1)&&T(1)&&T(2)) {
		return 20
	}
	else if (T(0)!=T(1)&&T(1)!=T(2)&&T(0)!=T(2)) {
		return 0
	}
	else return 10
	
}